Add multi language support
#6877

--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Shared/_Layout.en.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Shared/_Layout.en.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="aaa" xml:space="preserve">
-    <value>def location 3</value>
+  <data name="DayPlanning" xml:space="preserve">
+    <value>Day Planning</value>
+  </data>
+  <data name="LogOut" xml:space="preserve">
+    <value>Log out</value>
   </data>
 </root>
