--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Shared/_Layout.fr.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Shared/_Layout.fr.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,10 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Location" xml:space="preserve">
-    <value>EN Blah</value>
+  <data name="DayPlanning" xml:space="preserve">
+    <value>FR day planning</value>
   </data>
-  <data name="Location 2" xml:space="preserve">
-    <value>EN location 2</value>
+  <data name="LogOut" xml:space="preserve">
+    <value>FR log out</value>
   </data>
 </root>
