--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Shared/_Layout.fr.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Shared/_Layout.fr.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="DayPlanning" xml:space="preserve">
-    <value>FR day planning</value>
+    <value>Planning du jour</value>
   </data>
   <data name="LogOut" xml:space="preserve">
-    <value>FR log out</value>
+    <value>Déconnecter</value>
   </data>
 </root>
