--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/Get.en.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/Get.en.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,10 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DayPlanning" xml:space="preserve">
-    <value>Planning du jour</value>
+  <data name="WelcomeMessage" xml:space="preserve">
+    <value>Thank you for your patience, you may find all relevant information here the day your Center is scheduled.</value>
   </data>
-  <data name="LogOut" xml:space="preserve">
-    <value>Se déconnecter</value>
+  <data name="WelcomeQCandidate" xml:space="preserve">
+    <value>Welcome at QCandidate!</value>
   </data>
 </root>
