--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/MemoProgramComponents/Details.en.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/MemoProgramComponents/Details.en.resx
@@ -118,21 +118,21 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Agenda" xml:space="preserve">
-    <value>Agenda</value>
+    <value>Calendar</value>
   </data>
   <data name="Context" xml:space="preserve">
     <value>Context</value>
   </data>
   <data name="FunctionDescription" xml:space="preserve">
-    <value>Functie omschrijving</value>
+    <value>Function description</value>
   </data>
   <data name="Introduction" xml:space="preserve">
-    <value>Inleiding</value>
+    <value>Introduction</value>
   </data>
   <data name="Memos" xml:space="preserve">
     <value>Memos</value>
   </data>
   <data name="Quit" xml:space="preserve">
-    <value>Onderdeel afsluiten</value>
+    <value>End exercise</value>
   </data>
 </root>
