--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/PdfProgramComponents/Details.en.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/PdfProgramComponents/Details.en.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="NoAccessYet" xml:space="preserve">
-    <value>You can consult all relevant documents here &lt;span style="text-decoration: underline;"&gt;as soon as your preparation time commences.&lt;/span&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;Thank you for your patience</value>
+    <value>You can consult all relevant documents here &lt;span style="text-decoration: underline;"&gt;as soon as your preparation time commences.&lt;/span&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;Thank you for your patience&lt;/div&gt;</value>
   </data>
 </root>
