--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/PdfProgramComponents/Details.fr.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/PdfProgramComponents/Details.fr.resx
@@ -118,6 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="NoAccessYet" xml:space="preserve">
-    <value>Vous pouvez accéder les documents nécessaires ici &lt;span style="text-decoration: underline;"&gt;dès que votre préparation commence.&lt;/span&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;Merci de votre patience</value>
+    <value>Vous pouvez accéder les documents nécessaires ici &lt;span style="text-decoration: underline;"&gt;dès que votre préparation commence.&lt;/span&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;Merci de votre patience&lt;/div&gt;</value>
   </data>
 </root>
