update resource files add selfrection link to planning add evaluation link to planning

--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/DisplayTemplates/ProgramComponent.fr.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/DisplayTemplates/ProgramComponent.fr.resx
@@ -120,7 +120,16 @@
   <data name="Memo" xml:space="preserve">
     <value>Memo</value>
   </data>
+  <data name="OfficeEvaluation" xml:space="preserve">
+    <value>&lt;a href="https://evaluation.quintessence.be/default_fr.aspx" target="_blank"&gt;Formulaire d'évaluation&lt;/a&gt;</value>
+  </data>
+  <data name="OnlineEvaluation" xml:space="preserve">
+    <value>&lt;a href="https://evaluation.quintessence.be/online_fr.aspx" target="_blank"&gt;Formulaire d'évaluation&lt;/a&gt;</value>
+  </data>
   <data name="PdfDocument" xml:space="preserve">
     <value>Document</value>
+  </data>
+  <data name="SelfReflection" xml:space="preserve">
+    <value>&lt;a href="https://evaluation.quintessence.be/autoreflexion.aspx?ID={0}" target="_blank"&gt;Auto-réflexion&lt;/a&gt;</value>
   </data>
 </root>
