--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/DisplayTemplates/ProgramComponent.nl.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/DisplayTemplates/ProgramComponent.nl.resx
@@ -120,7 +120,16 @@
   <data name="Memo" xml:space="preserve">
     <value>Memo</value>
   </data>
+  <data name="OfficeEvaluation" xml:space="preserve">
+    <value>&lt;a href="https://evaluation.quintessence.be/" target="_blank"&gt;Evaluatieformulier&lt;/a&gt;</value>
+  </data>
+  <data name="OnlineEvaluation" xml:space="preserve">
+    <value>&lt;a href="https://evaluation.quintessence.be/online_nl.aspx" target="_blank"&gt;Evaluatieformulier&lt;/a&gt;</value>
+  </data>
   <data name="PdfDocument" xml:space="preserve">
     <value>Document</value>
+  </data>
+  <data name="SelfReflection" xml:space="preserve">
+    <value>&lt;a href="https://evaluation.quintessence.be/zelfreflectie.aspx?ID={0}" target="_blank"&gt;Zelfreflectie&lt;/a&gt;</value>
   </data>
 </root>
