--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/Get.en.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/Get.en.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="SimulationStart" xml:space="preserve">
+    <value>You can start on the next section:</value>
+  </data>
   <data name="WelcomeMessage" xml:space="preserve">
     <value>Thank you for your patience, you may find all relevant information here the day your Center is scheduled.</value>
   </data>
