--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/Get.fr.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/Get.fr.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="SimulationStart" xml:space="preserve">
+    <value>Vous pouvez commencer la section suivante :</value>
+  </data>
   <data name="WelcomeMessage" xml:space="preserve">
     <value>Nous vous remercions de votre patience. Le jour de votre Centre, vous y trouverez toutes les informations nécessaires.</value>
   </data>
