--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/Get.nl.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/Get.nl.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="SimulationStart" xml:space="preserve">
+    <value>Je kan aan het volgende onderdeel starten:</value>
+  </data>
   <data name="WelcomeMessage" xml:space="preserve">
     <value>Nog even geduld, op de dag van het Center zal u hier alle relevante informatie terugvinden.</value>
   </data>
