--- a/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/Get.fr.resx
+++ b/src/Hosts/Quintessence.QCandidate.Web/Resources/Views/Assessments/Get.fr.resx
@@ -118,12 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="SimulationStart" xml:space="preserve">
-    <value>Vous pouvez commencer la section suivante :</value>
+    <value>Vous pouvez commencer à la préparation de l'exercice.</value>
   </data>
   <data name="WelcomeMessage" xml:space="preserve">
-    <value>Nous vous remercions de votre patience. Le jour de votre Centre, vous y trouverez toutes les informations nécessaires.</value>
+    <value>&lt;p&gt;Le jour de votre assessment, vous allez y trouvez toutes les informations nécessaires.&lt;/p&gt;</value>
   </data>
   <data name="WelcomeQCandidate" xml:space="preserve">
-    <value>Bienvenu sur QCandidate !</value>
+    <value>&lt;h3&gt;Bienvenu sur QCandidate !&lt;/h3&gt;&lt;br&gt;&lt;p&gt;Ceci est votre page personnelle.&lt;/p&gt;</value>
   </data>
 </root>
